Fix failure when password limit is hit